[project]
name = "fbref-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "langchain-community>=0.3.27",
    "langchain>=0.3.26",
    "openai>=1.97.0",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "langchain-openai>=0.3.28",
    "beautifulsoup4>=4.13.4",
    "aiofiles>=24.1.0",
    "pandas>=2.3.1",
    "lxml>=6.0.0",
    "curl-cffi>=0.12.0",
    "tqdm>=4.67.1",
]
